Add navbar, favicon and hero image section

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
       type="text/css"
     />
-   
+
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -16,9 +16,94 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Eleventh Embodiment</title>
-     <link rel = "icon" type="image/png" href="assets/images/favicon.png"/>
-</head>
-<body>
-    
-</body>
+    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
+  </head>
+  <body>
+    <header>
+      <!---------Navigation Bar ------------->
+      <nav class="navbar navbar-expand-lg navbar-style">
+        <a class="navbar-brand" href="#">
+          <img
+            src="assets/images/logo.png"
+            width="50"
+            height="70"
+            class="d-inline-block"
+            alt="logo"
+            loading="lazy"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarIcon"
+          aria-controls="navbarIcon"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon">
+            <span class="navbar-toggler-icon">
+              <span class="navbar-toggler-icon"> </span>
+            </span>
+          </span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarIcon">
+          <ul class="navbar-nav ml-auto menucontainer">
+            <li class="nav-item active menuitem">
+              <a class="active nav-link" href="#"
+                >Home <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item active menuitem">
+              <a class="nav-link" href="#"
+                >About<span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item active menuitem">
+              <a class="nav-link" href="#"
+                >Yoga<span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item active menuitem">
+              <a class="nav-link" href="#"
+                >Healing<span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item active menuitem">
+              <a class="nav-link" href="#"
+                >Retreats<span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item active menuitem">
+              <a class="nav-link" href="#"
+                >Contact<span class="sr-only">(current)</span></a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <!----------------------------------------------------------------------------->
+    </header>
+    <section class="container-fluid hero-container hero-outer">
+      <div class="row">
+        <div class="col">
+          <div class="jumbotron">
+            <h1 class="display-4">Eleventh Embodiment</h1>
+            <hr />
+            <h1 class="lead">Alternative and Holistic Healing</h1>
+            <p class="lead">
+              <a class="btn btn-secondary btn-lg" href="#" role="button"
+                >Learn more
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <footer></footer>
+  </body>
 </html>
