Add about section of homepage

--- a/index.html
+++ b/index.html
@@ -84,23 +84,39 @@
       </nav>
       <!----------------------------------------------------------------------------->
     </header>
-    <section class="container-fluid hero-container hero-outer">
+<div class="hero-outer">
+    <section class="container-fluid hero-container">
       <div class="row">
         <div class="col">
           <div class="jumbotron">
-            <h1 class="display-4">Eleventh Embodiment</h1>
+            <h1 class="display-4"><strong>Eleventh Embodiment</strong></h1>
             <hr />
             <h1 class="lead">Alternative and Holistic Healing</h1>
             <p class="lead">
-              <a class="btn btn-secondary btn-lg" href="#" role="button"
+              <a class="btn btn-secondary btn-lg uppercase" href="#" role="button"
                 >Learn more
               </a>
             </p>
           </div>
         </div>
       </div>
+      </section>
+</div>
+    
+   <section class="row about">
+        <div class="col-6">
+          <h3>Why Eleventh Embodiment?</h3>
+          <br />
+          <h4>
+            Human body is made up of ten bodies: the physical body, three mental
+            bodies and six energy bodies. The eleventh embodiment is a pure
+            state of consciousness when all ten bodies are under your direction.
+            Then you have the ability to see all events as part of Divine’s plan
+            and see Divine in everything.
+          </h4>
+        </div>
+    
     </section>
-    <section></section>
     <section></section>
     <section></section>
     <section></section>
