Add class times to index.html

--- a/index.html
+++ b/index.html
@@ -5,15 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-      type="text/css"
-    />
-
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      type="text/css"
-    />
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Eleventh Embodiment</title>
     <link rel="icon" type="image/png" href="assets/images/favicon.png" />
@@ -22,7 +15,7 @@
     <header>
       <!---------Navigation Bar ------------->
       <nav class="navbar navbar-expand-lg navbar-style">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img
             src="assets/images/logo.png"
             width="50"
@@ -50,7 +43,7 @@
         <div class="collapse navbar-collapse" id="navbarIcon">
           <ul class="navbar-nav ml-auto menucontainer">
             <li class="nav-item active menuitem">
-              <a class="active nav-link" href="#"
+              <a class="active nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
@@ -75,7 +68,7 @@
               >
             </li>
             <li class="nav-item active menuitem">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="contact.html"
                 >Contact<span class="sr-only">(current)</span></a
               >
             </li>
@@ -93,7 +86,7 @@
               <hr />
               <h1 class="lead">Alternative and Holistic Healing</h1>
               <p class="lead">
-                <a class="btn btn-secondary btn-lg" href="#" role="button"
+                <a class="btn btn-secondary btn-lg btn-about" href="#" role="button"
                   >Learn more
                 </a>
               </p>
@@ -156,7 +149,34 @@
    
 
     <section></section>
-    <section></section>
+     <section id="class-times">
+        <div>
+            <h3><a href="#">Kundalini Yoga</a></h3>
+            <h4>Monday</h4>
+            <h4>Online</h4>
+            <h4>8.30am-10.00am</h4>
+        </div>
+        <div>
+            <h3><a href="#">Yin Yoga</a></h3>
+            <h4>Wednesday</h4>
+            <h4>Online</h4>
+            <h4>5.30pm-6.45pm</h4>
+        </div>
+        <div>
+            <h3><a href="#">Tantra Yoga</a></h3>
+            <h4>Friday</h4>
+            <h4>Online</h4>
+            <h4>6.30pm-7.45pm</h4>
+        </div>
+        <div>
+            <h3><a href="#">Kundalini Yoga</a></h3>
+            <h4>Saturday</h4>
+            <h4>Online</h4>
+            <h4>8.30am-10.00am</h4>
+        </div>
+                 
+       
+    </section>
     <footer class="container-fluid">
       <div class="row">
         <div class="col-12 col-md-6 contact">
