Edit welcome section and quote section of home page and added hover effect on contact page

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <!---------Navigation Bar ------------->
-      <nav class="navbar navbar-expand-lg navbar-style">
+       <nav class="navbar navbar-expand-lg navbar-style">
         <a class="navbar-brand" href="index.html">
           <img
             src="assets/images/logo.png"
@@ -48,22 +48,22 @@
               >
             </li>
             <li class="nav-item active menuitem">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="about.html"
                 >About<span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item active menuitem">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="yoga.html"
                 >Yoga<span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item active menuitem">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="healing.html"
                 >Healing<span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item active menuitem">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="retreats.html"
                 >Retreats<span class="sr-only">(current)</span></a
               >
             </li>
@@ -109,9 +109,9 @@
       <div class="row">
         <div class="col-12 col-md-6 contact">
           <h4>Contact me:</h4>
-          <h5><i class="fa fa-envelope"></i> harpreet@elem.com</h5>
+          <h5><i class="fa fa-envelope"></i> <a href="contact.html">harpreet@elem.com</a></h5>
           <h5><i class="fa fa-phone"></i> +353 (0)85 833 5702</h5>
-          <h5><i class="fa fa-instagram"></i> @eleventh_embodiment</h5>
+          <h5><i class="fa fa-instagram"></i><a href="instagram.com">  @eleventh_embodiment</a></h5>
         </div>
         <div class="col-12 col-md-6 follow">
           <h4>Follow Me:</h4>
