--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <!---------Navigation Bar ------------->
-       <nav class="navbar navbar-expand-lg navbar-style">
+       <nav class="navbar navbar-expand-lg navbar-style ">
         <a class="navbar-brand" href="index.html">
           <img
             src="assets/images/logo.png"
@@ -88,9 +88,9 @@
                      <h4>Fill in the form below and I'll get back to you shortly!</h4>
                             <label for="name" class="label-color">Full Name</label>
                             <input type="text" name="name" id="fullname" class="form-control" required />
-                            <label for="email"class="label-color"> Email Address</label>
+                            <label for="email" class="label-color"> Email Address </label>
                             <input type="email" name="email" id="emailaddress" class="form-control" required />
-                            <label for="name"class="label-color"> Message</label>
+                            <label for="name" class="label-color"> Message</label>
                             <textarea rows="5" name="message" id="message" class="form-control" required></textarea>
                             <div class="form-row text-center">
                             <div class="col">
@@ -135,5 +135,9 @@
         </div>
       </div>
     </footer>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   </body>
 </html>
