--- a/yoga.html
+++ b/yoga.html
@@ -53,14 +53,13 @@
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
-
             <li class="nav-item  menuitem">
-              <a class="nav-link" href="yoga.html"
+              <a class="nav-link active" href="yoga.html"
                 >Yoga<span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item  menuitem">
-              <a class="nav-link" href="gallery.htmll"
+              <a class="nav-link" href="gallery.html"
                 >Gallery<span class="sr-only">(current)</span></a
               >
             </li>
@@ -69,8 +68,8 @@
                 >Retreats<span class="sr-only">(current)</span></a
               >
             </li>
-             <li class="nav-item  menuitem">
-              <a class="nav-link active" href="contact.html"
+            <li class="nav-item  menuitem">
+              <a class="nav-link" href="contact.html"
                 >Contact<span class="sr-only">(current)</span></a
               >
             </li>
@@ -80,46 +79,70 @@
       <!--------------------------------------------------------------------------------->
     </header>
 
-    <section class="container-fluid form-section">
-      <div class="row bg-color-contact">
-        <div class="col">
-          <div class="center-form">
-            <form class="signup-form">
-              <h3>Have questions to ask, or simply want to connect?</h3>
-              <h4>Fill in the form below and I'll get back to you shortly!</h4>
-              <label for="name" class="label-color">Full Name</label>
-              <input
-                type="text"
-                name="name"
-                id="fullname"
-                class="form-control"
-                required
-              />
-              <label for="email" class="label-color"> Email Address </label>
-              <input
-                type="email"
-                name="email"
-                id="emailaddress"
-                class="form-control"
-                required
-              />
-              <label for="name" class="label-color"> Message</label>
-              <textarea
-                rows="5"
-                name="message"
-                id="message"
-                class="form-control"
-                required
-              ></textarea>
-              <div class="form-row text-center">
-                <div class="col">
-                  <button type="submit" class="btn btn-secondary btn-form">
-                    Send
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
+    <section>
+      <div class="row">
+        <div class="col-12 col-md-8">
+          <h5 class="yoga-heading">
+            Kundalini Yoga <i>, as taught by Yogi Bhajan</i
+            ><br /><br />Kundalini Yoga is a place of transformation, is not to
+            be taken lightly. It is like an express train that shakes and wakes
+            you up! We awaken the energy of consciousness, to practice in a way
+            that sheds light on our self-imposed limitations, and invites us to
+            think out of the box and develop our intuitive mind. Being able to
+            live from our intuitive mind is one of the main goals of a Kundalini
+            practitioner. The kriyas and meditations are much more specific than
+            your regular flow class. Kriyas are a specific set of exercises that
+            generate energy, organize that energy and deliver you to a specific
+            energetic state — particularly one of greater awareness. Within the
+            practice are built-in moments of stillness where we sit quietly and
+            awaken to our Self. The breathwork within the kriyas is so powerful
+            that it starts to strip away the layers that veil our consciousness,
+            and in the sweet moments between poses we can sense the fullness of
+            who we are. The kriyas work on strengthening your nervous system,
+            balancing your glandular system, purifying the body and calming the
+            mind. In Kundalini yoga we also chant mantras, these mantras contain
+            the vibrations of peace, prosperity, connection I can confirm that
+            trough Kundalini Yoga we are strengthening the muscle our spirit and
+            would sincerely encourage you to have an experience of Kundalini
+            Yoga for yourself. It will add depth to your existing practice and
+            to your life. No previous experience necessary, just come as you are
+            ! Welcome to the journey!
+          </h5>
+        </div>
+      </div>
+    </section>
+    <div class="row">
+      <div class="col-12 col-md-2 order-2">
+        <div class="img-fluid quote-img"></div>
+      </div>
+      <div class="col-12 col-md-7 order-1 offset-1">
+        <h5 class="quote-text">
+          <i
+            >"When the Divine in you, and the human in you are in parallel
+            unisonness, then you are in the Eleventh Body. You have no duality,
+            you have divine vision, and the truth flows from you. You don’t have
+            to find anything outside of you. The jewels are all in you…you are
+            rich inside, you have satisfaction and contentment.”
+            <br /><br />Yogi Bhajan</i
+          >
+        </h5>
+      </div>
+    </div>
+
+    <section>
+      <div class="row">
+        <div class="col-12 col-md-6">
+          <h5 class="yoga-heading">
+            YIN YOGA<br />
+            is a slow-paced style of yoga as exercise, incorporating principles
+            of traditional Chinese medicine, with asanas (postures) that are
+            held for longer periods of time than in other styles. Yin Yoga poses
+            apply moderate stress to the connective tissues of the body—the
+            tendons, fasciae, and ligaments—with the aim of increasing
+            circulation in the joints and improving flexibility. A more
+            meditative approach to yoga, its goals are awareness of inner
+            silence, and bringing to light a universal, interconnecting quality.
+          </h5>
         </div>
       </div>
     </section>
@@ -160,25 +183,5 @@
         </div>
       </div>
     </footer>
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
