Add new images to gallery.html and edit styling

--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Eleventh Embodiment</title>
-    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
+    <link rel="icon" type="image/png" href="assets/images/favicon-leaf.png" />
   </head>
   <body>
     <header>
@@ -23,9 +23,9 @@
       <nav class="navbar navbar-expand-sm navbar-style">
         <a class="navbar-brand" href="index.html">
           <img
-            src="assets/images/logo.png"
-            width="50"
-            height="70"
+            src="assets/images/logo-leaf.png"
+            width="60"
+            height="60"
             class="d-inline-block"
             alt="logo"
             loading="lazy"
@@ -48,17 +48,17 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarIcon">
           <ul class="navbar-nav ml-auto menucontainer">
-            <li class="nav-item  menuitem">
+            <li class="nav-item menuitem">
               <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
-            <li class="nav-item  menuitem">
+            <li class="nav-item menuitem">
               <a class="nav-link" href="yoga.html"
                 >Yoga<span class="sr-only">(current)</span></a
               >
             </li>
-            <li class="nav-item  menuitem">
+            <li class="nav-item menuitem">
               <a class="nav-link active" href="gallery.html"
                 >Gallery<span class="sr-only">(current)</span></a
               >
@@ -79,22 +79,80 @@
       <!--------------------------------------------------------------------------------->
     </header>
 
-    <section id="photo">
-      <img src="assets/images/class.jpg" alt="yoga class" />
-      <img src="assets/images/ana-class.jpg" alt="yoga class" />
-      <img src="assets/images/group.jpg" alt="yoga class" />
-      <img src="assets/images/outside.jpg" alt="yoga class" />
-      <img src="assets/images/dress.jpg" alt="yoga class" />
-      <img src="assets/images/pose1.jpg" alt="yoga class" />
-      <img src="assets/images/girls.png" alt="yoga class" />
-      <img src="assets/images/reiki.jpg" alt="yoga class" />
-      <img src="assets/images/circle.jpg" alt="yoga class" />
-      <img src="assets/images/session.jpg" alt="yoga class" />
-      <img src="assets/images/hand.jpg" alt="yoga class" />
-      <img src="assets/images/river.jpg" alt="yoga class" />
-      <img src="assets/images/mountain.png" alt="yoga class" />
-      <img src="assets/images/playing.png" alt="yoga class" />
-      <img src="assets/images/friends.png" alt="yoga class" />
+    <section class="container-fluid photos">
+      <div class="row">
+        <div class="col-6 col-md-3">
+          <img
+            src="assets/images/ana-class.jpg"
+            alt="yoga class"
+            height="400"
+            width="500"
+          />
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="assets/images/session.jpg" alt="yoga class" />
+        </div>
+        <div class="col-6 col-md-3">
+          <img
+            src="assets/images/group.jpg"
+            alt="yoga class"
+            height="500"
+            width="650"
+          />
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="assets/images/circle.jpg" alt="yoga class" />
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="assets/images/friends.png" alt="yoga class" />
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="assets/images/girls.png" alt="yoga class" />
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="assets/images/outside.jpg" alt="yoga class" />
+          </div>
+          <div class="col-6 col-md-3">
+          <img src="assets/images/playing.png" alt="yoga class" />
+          </div>
+          <div class="col-6 col-md-3">
+          <img src="assets/images/dress.jpg" alt="yoga class" />
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="assets/images/river.jpg" alt="yoga class" />
+        </div>
+            <div class="col-6 col-md-3">
+          <img src="assets/images/reiki.jpg" alt="yoga class" />
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="assets/images/hand.jpg" alt="yoga class" />
+        </div>
+          <div class="col-6 col-md-3">
+          <img src="assets/images/pose1.jpg" alt="yoga class" />
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="assets/images/pose.jpg" alt="yoga class" />
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="assets/images/class.jpg" alt="yoga class" />
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="assets/images/nature.jpg" alt="yoga class" />
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="assets/images/mountain1.jpg" alt="yoga class" />
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="assets/images/ana-bnw.jpg" alt="yoga class" />
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="assets/images/cobra.png" alt="yoga class" />
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="assets/images/namaste.png" alt="yoga class" />
+        </div>
+      </div>
+      
     </section>
 
     <footer class="container-fluid">
