Update styling for all the pages to match new design

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Eleventh Embodiment</title>
-    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
+    <link rel="icon" type="image/png" href="assets/images/favicon-leaf.png" />
   </head>
   <body>
     <header>
@@ -23,9 +23,9 @@
       <nav class="navbar navbar-expand-lg navbar-style">
         <a class="navbar-brand" href="index.html">
           <img
-            src="assets/images/logo.png"
-            width="50"
-            height="70"
+            src="assets/images/logo-leaf.png"
+            width="60"
+            height="60"
             class="d-inline-block"
             alt="logo"
             loading="lazy"
