--- a/yoga.html
+++ b/yoga.html
@@ -15,7 +15,7 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Eleventh Embodiment</title>
-    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
+    <link rel="icon" type="image/png" href="assets/images/favicon-leaf.png" />
   </head>
   <body>
     <header>
@@ -23,9 +23,9 @@
       <nav class="navbar navbar-expand-lg navbar-style">
         <a class="navbar-brand" href="index.html">
           <img
-            src="assets/images/logo.png"
-            width="50"
-            height="70"
+            src="assets/images/logo-leaf.png"
+            width="60"
+            height="60"
             class="d-inline-block"
             alt="logo"
             loading="lazy"
@@ -78,7 +78,10 @@
       </nav>
       <!--------------------------------------------------------------------------------->
     </header>
-
+<div> 
+<h2 class="class-heading">What I Do?</h2>
+<h3 class="heading-text"> I am passionate about yoga in general but I found myself most connected to the Kundalini, Yin and Tantra styles which I teach.
+I also combine them with healing techniques like Reiki, Sound healing, Shamanic Breathwork and Yoni healing and massage. </h3>
     <section>
       <div class="row">
         <div class="col-12 col-md-8">
@@ -143,6 +146,51 @@
             meditative approach to yoga, its goals are awareness of inner
             silence, and bringing to light a universal, interconnecting quality.
           </h5>
+        </div>
+      </div>
+    </section>
+
+<section class="class-heading">
+      <h3><i>My Classes</i></h3>
+    </section>
+
+    <section class="container-fluid class-container">
+      <div class="row">
+        <div class="col-12 col-md-3 class-times">
+          <h3><a href="yoga.html">Kundalini Yoga</a></h3>
+          <h4>Mon & Wed</h4>
+          <h4>Online</h4>
+          <h4>8.30am-10.00am</h4>
+          <button type="submit" class="btn btn-secondary btn-class" data-toggle="modal" data-target="#bookClassModal">
+            Book
+          </button>
+        </div>
+        <div class="col-12 col-md-3 class-times">
+          <h3><a href="#">Yin Yoga</a></h3>
+          <h4>Tue & Thu</h4>
+          <h4>Online</h4>
+          <h4>5.30pm-6.45pm</h4>
+          <button type="submit" class="btn btn-secondary btn-class" data-toggle="modal" data-target="#bookClassModal">
+            Book
+          </button>
+        </div>
+        <div class="col-12 col-md-3 class-times">
+          <h3><a href="#">Tantra Yoga</a></h3>
+          <h4>Fri & Sat</h4>
+          <h4>Online</h4>
+          <h4>6.30pm-7.45pm</h4>
+          <button type="submit" class="btn btn-secondary btn-class" data-toggle="modal" data-target="#bookClassModal">
+            Book
+          </button>
+        </div>
+        <div class="col-12 col-md-3 class-times">
+          <h3><a href="#">Healing</a></h3>
+          <h4>Sunday</h4>
+          <h4>By appointment only</h4>
+          <h4>10am-6.00pm</h4>
+          <button type="submit" class="btn btn-secondary btn-class" data-toggle="modal" data-target="#bookClassModal">
+            Book
+          </button>
         </div>
       </div>
     </section>
