--- a/retreats.html
+++ b/retreats.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Eleventh Embodiment</title>
-    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
+    <link rel="icon" type="image/png" href="assets/images/favicon-leaf.png" />
   </head>
   <body>
     <header>
@@ -17,9 +17,9 @@
       <nav class="navbar navbar-expand-lg navbar-style">
         <a class="navbar-brand" href="index.html">
           <img
-            src="assets/images/logo.png"
-            width="50"
-            height="70"
+            src="assets/images/logo-leaf.png"
+            width="60"
+            height="60"
             class="d-inline-block"
             alt="logo"
             loading="lazy"
