Update gitignore file and removed about.html

--- a/about.html
+++ b/about.html
@@ -58,8 +58,8 @@
               >
             </li>
             <li class="nav-item active menuitem">
-              <a class="nav-link" href="healing.html"
-                >Healing<span class="sr-only">(current)</span></a
+              <a class="nav-link" href="gallery.html"
+                >Gallery<span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item active menuitem">
@@ -117,19 +117,19 @@
                     <li> 
                         200 Hour Yoga Teacher Training
                         Himalayan Yoga Bliss<br> Darjeeling, India
-                        November 2016
+                        November 2014
                     </li>
 
                     <li>
-                        18 Hour Yoga Therapy Ball Teacher Training
-                        Essential Yoga Studio<br> Fernie, Canada
-                        September 2018
+                        200 Hour Kundalini Yoga Teacher Training
+                        Essential Yoga Studio<br> Rishikesh, India
+                        September 2015
                     </li>
 
                     <li>
                         50 Hour Yin Yoga & Meridians Teacher Training<br>
-                        Online, with Annie Au
-                        May 2020
+                        Rishikesh, India
+                        May 2018
                     </li>
                 </ul>
             </div>
@@ -138,22 +138,34 @@
             <div class="teaching">
                 <h5>Teaching</h5>
                  <ul>
-                    <li>  Online Yoga with Emily Ruth:March 2020 - present </li>
-                    <li> Yoga Morzine Studio: December 2019 - present</li>
-                    <li> Mountain Rehab, Morzine: November 2018 - present</li>
-                    <li> Essential Yoga Studio, Fernie: November 2017 - October 2018</li>
-                    <li> Bear Paw Yoga Studio, Whistler: June - October 2017</li>
+                    <li> Online Yoga with Harpreet: March 2019 - present </li>
+                    <li> Little Bird Studio Rishikesh: December 2018 - present </li>
+                    <li> Om Yoga Studio, Bali: November 2018 - December 2019</li>
+                    <li> Essential Yoga Studio, Rishikesh: November 2017 - October 2018</li>
+                    <li> Phi Phi Yoga Studio, Thailand: June - October 2017</li>
                 </ul>
             </div>
         </div>
     </div>
 </section>
 
+<section class="container-fluid yoga">
+    <div class="row">   
+        <div class="col-12">    
+            <h3 class="name-heading">Yoga</h3>
+        </div> 
+    </div>
+</section>
 
+<section class="container-fluid healing">
+    <div class="row">   
+        <div class="col-12">    
+            <h3 class="name-heading">Healing</h3>
+        </div> 
+    </div>
+</section>
 
-
-
-<footer class="container">
+<footer class="container-fluid">
       <div class="row">
         <div class="col-12 col-md-6 ">
             <div class="contact"> <!---DODALA OVAJ DIV--->
