Edit navigation to match change of retreats.html to events.html page on all pages

--- a/yoga.html
+++ b/yoga.html
@@ -24,8 +24,8 @@
         <a class="navbar-brand" href="index.html">
           <img
             src="assets/images/logo-leaf.png"
-            width="60"
-            height="60"
+            width="50"
+            height="50"
             class="d-inline-block"
             alt="logo"
             loading="lazy"
@@ -79,9 +79,11 @@
       <!--------------------------------------------------------------------------------->
     </header>
 <div> 
+<!------
 <h2 class="class-heading">What I Do?</h2>
 <h3 class="heading-text"> I am passionate about yoga in general but I found myself most connected to the Kundalini, Yin and Tantra styles which I teach.
-I also combine them with healing techniques like Reiki, Sound healing, Shamanic Breathwork and Yoni healing and massage. </h3>
+I also combine them with healing techniques like Reiki, Sound healing, Shamanic Breathwork and Yoni healing and massage. </h3> ----->
+</div>
     <section>
       <div class="row">
         <div class="col-12 col-md-8">
@@ -197,7 +199,7 @@ I also combine them with healing techniques like Reiki, Sound healing, Shamanic 
 
     <footer class="container-fluid">
       <div class="row">
-        <div class="col-12 col-md-6 contact">
+        <div class="col-12 col-md-6 contact-heading">
           <h4>Contact me:</h4>
           <h5>
             <i class="fa fa-envelope"></i>
@@ -209,7 +211,7 @@ I also combine them with healing techniques like Reiki, Sound healing, Shamanic 
             ><a href="instagram.com"> @eleventh_embodiment</a>
           </h5>
         </div>
-        <div class="col-12 col-md-6 follow">
+        <div class="col-12 col-md-6 follow-heading">
           <h4>Follow Me:</h4>
           <ul class="social-media">
             <li>
