--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,8 @@
         <a class="navbar-brand" href="index.html">
           <img
             src="assets/images/logo-leaf.png"
-            width="60"
-            height="60"
+            width="50"
+            height="50"
             class="d-inline-block"
             alt="logo"
             loading="lazy"
@@ -59,14 +59,14 @@
                 >Yoga<span class="sr-only">(current)</span></a
               >
             </li>
-            <li class="nav-item  menuitem">
-              <a class="nav-link" href="gallery.htmll"
-                >Gallery<span class="sr-only">(current)</span></a
+             <li class="nav-item menuitem">
+              <a class="nav-link active" href="events.html"
+                >Events<span class="sr-only">(current)</span></a
               >
             </li>
-            <li class="nav-item menuitem">
-              <a class="nav-link" href="retreats.html"
-                >Retreats<span class="sr-only">(current)</span></a
+            <li class="nav-item  menuitem">
+              <a class="nav-link" href="gallery.html"
+                >Gallery<span class="sr-only">(current)</span></a
               >
             </li>
              <li class="nav-item  menuitem">
@@ -126,7 +126,7 @@
 
     <footer class="container-fluid">
       <div class="row">
-        <div class="col-12 col-md-6 contact">
+        <div class="col-12 col-md-6 contact-heading">
           <h4>Contact me:</h4>
           <h5>
             <i class="fa fa-envelope"></i>
@@ -138,7 +138,7 @@
             ><a href="instagram.com"> @eleventh_embodiment</a>
           </h5>
         </div>
-        <div class="col-12 col-md-6 follow">
+        <div class="col-12 col-md-6 follow-heading">
           <h4>Follow Me:</h4>
           <ul class="social-media">
             <li>
