--- a/gallery.html
+++ b/gallery.html
@@ -24,8 +24,8 @@
         <a class="navbar-brand" href="index.html">
           <img
             src="assets/images/logo-leaf.png"
-            width="60"
-            height="60"
+            width="50"
+            height="50"
             class="d-inline-block"
             alt="logo"
             loading="lazy"
@@ -59,13 +59,13 @@
               >
             </li>
             <li class="nav-item menuitem">
-              <a class="nav-link active" href="gallery.html"
-                >Gallery<span class="sr-only">(current)</span></a
+              <a class="nav-link active" href="events.html"
+                >Events<span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item menuitem">
-              <a class="nav-link" href="retreats.html"
-                >Retreats<span class="sr-only">(current)</span></a
+              <a class="nav-link active" href="gallery.html"
+                >Gallery<span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item menuitem">
@@ -157,44 +157,37 @@
 
     <footer class="container-fluid">
       <div class="row">
-        <div class="col-12 col-md-6">
-          <div class="contact">
-            <!---DODALA OVAJ DIV--->
-            <h4>Contact me:</h4>
-            <h5>
-              <i class="fa fa-envelope"></i>
-              <a href="contact.html">harpreet@elem.com</a>
-            </h5>
-            <h5><i class="fa fa-phone"></i> +353 (0)85 833 5702</h5>
-            <h5>
-              <i class="fa fa-instagram"></i
-              ><a href="instagram.com"> @eleventh_embodiment</a>
-            </h5>
-          </div>
+        <div class="col-12 col-md-6 contact-heading">
+          <h4>Contact me:</h4>
+          <h5>
+            <i class="fa fa-envelope"></i>
+            <a href="contact.html">harpreet@elem.com</a>
+          </h5>
+          <h5><i class="fa fa-phone"></i> +353 (0)85 833 5702</h5>
+          <h5>
+            <i class="fa fa-instagram"></i
+            ><a href="instagram.com"> @eleventh_embodiment</a>
+          </h5>
         </div>
-
-        <div class="col-12 col-md-6">
-          <div class="follow">
-            <!---DODALA OVAJ DIV--->
-            <h4>Follow Me:</h4>
-            <ul class="social-media">
-              <li>
-                <a href="https://www.facebook.com" target="_blank"
-                  ><i class="fa fa-facebook"></i
-                ></a>
-              </li>
-              <li>
-                <a href="https://www.youtube.com" target="_blank"
-                  ><i class="fa fa-youtube"></i
-                ></a>
-              </li>
-              <li>
-                <a href="https://www.instagram.com" target="_blank"
-                  ><i class="fa fa-instagram"></i
-                ></a>
-              </li>
-            </ul>
-          </div>
+        <div class="col-12 col-md-6 follow-heading">
+          <h4>Follow Me:</h4>
+          <ul class="social-media">
+            <li>
+              <a href="https://www.facebook.com" target="_blank"
+                ><i class="fa fa-facebook"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com" target="_blank"
+                ><i class="fa fa-youtube"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com" target="_blank"
+                ><i class="fa fa-instagram"></i
+              ></a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
