Change background image on Contact page

--- a/contact.html
+++ b/contact.html
@@ -48,29 +48,28 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarIcon">
           <ul class="navbar-nav ml-auto menucontainer">
-            <li class="nav-item  menuitem">
-              <a class=" nav-link" href="index.html"
+            <li class="nav-item menuitem grow">
+              <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
-
-            <li class="nav-item  menuitem">
-              <a class="nav-link" href="yoga.html"
-                >Yoga<span class="sr-only">(current)</span></a
+            <li class="nav-item menuitem grow">
+              <a class="nav-link" href="what-i-do.html"
+                >What I Do<span class="sr-only">(current)</span></a
               >
             </li>
-             <li class="nav-item menuitem">
-              <a class="nav-link active" href="events.html"
-                >Events<span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item  menuitem">
+            <li class="nav-item menuitem grow">
               <a class="nav-link" href="gallery.html"
                 >Gallery<span class="sr-only">(current)</span></a
               >
             </li>
-             <li class="nav-item  menuitem">
-              <a class="nav-link active" href="contact.html"
+            <li class="nav-item menuitem grow">
+              <a class="nav-link" href="events.html"
+                >Events<span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item menuitem active grow">
+              <a class="nav-link" href="contact.html"
                 >Contact<span class="sr-only">(current)</span></a
               >
             </li>
@@ -85,8 +84,8 @@
         <div class="col">
           <div class="center-form">
             <form class="signup-form">
-              <h3>Have questions to ask, or simply want to connect?</h3>
-              <h4>Fill in the form below and I'll get back to you shortly!</h4>
+              <h3>Have a question or simply want to connect?</h3>
+              <h4>Please fill in the form below</h4>
               <label for="name" class="label-color">Full Name</label>
               <input
                 type="text"
