Fix social media icons in footer

--- a/gallery.html
+++ b/gallery.html
@@ -48,27 +48,27 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarIcon">
           <ul class="navbar-nav ml-auto menucontainer">
-            <li class="nav-item menuitem">
+            <li class="nav-item menuitem grow">
               <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
-            <li class="nav-item menuitem">
-              <a class="nav-link" href="yoga.html"
-                >Yoga<span class="sr-only">(current)</span></a
+            <li class="nav-item menuitem grow">
+              <a class="nav-link" href="what-i-do.html"
+                >What I Do<span class="sr-only">(current)</span></a
               >
             </li>
-            <li class="nav-item menuitem">
-              <a class="nav-link active" href="events.html"
-                >Events<span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item menuitem">
-              <a class="nav-link active" href="gallery.html"
+            <li class="nav-item menuitem active grow">
+              <a class="nav-link" href="gallery.html"
                 >Gallery<span class="sr-only">(current)</span></a
               >
             </li>
-            <li class="nav-item menuitem">
+            <li class="nav-item menuitem grow">
+              <a class="nav-link" href="events.html"
+                >Events<span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item menuitem grow">
               <a class="nav-link" href="contact.html"
                 >Contact<span class="sr-only">(current)</span></a
               >
@@ -111,23 +111,23 @@
         </div>
         <div class="col-6 col-md-3">
           <img src="assets/images/outside.jpg" alt="yoga class" />
-          </div>
-          <div class="col-6 col-md-3">
+        </div>
+        <div class="col-6 col-md-3">
           <img src="assets/images/playing.png" alt="yoga class" />
-          </div>
-          <div class="col-6 col-md-3">
+        </div>
+        <div class="col-6 col-md-3">
           <img src="assets/images/dress.jpg" alt="yoga class" />
         </div>
         <div class="col-6 col-md-3">
           <img src="assets/images/river.jpg" alt="yoga class" />
         </div>
-            <div class="col-6 col-md-3">
+        <div class="col-6 col-md-3">
           <img src="assets/images/reiki.jpg" alt="yoga class" />
         </div>
         <div class="col-6 col-md-3">
           <img src="assets/images/hand.jpg" alt="yoga class" />
         </div>
-          <div class="col-6 col-md-3">
+        <div class="col-6 col-md-3">
           <img src="assets/images/pose1.jpg" alt="yoga class" />
         </div>
         <div class="col-6 col-md-3">
@@ -152,7 +152,6 @@
           <img src="assets/images/namaste.png" alt="yoga class" />
         </div>
       </div>
-      
     </section>
 
     <footer class="container-fluid">
