Change hero image

--- a/index.html
+++ b/index.html
@@ -46,25 +46,24 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarIcon">
           <ul class="navbar-nav ml-auto menucontainer">
-            <li class="nav-item menuitem grow">
-              <a class="nav-link active" href="index.html"
+            <li class="nav-item menuitem active grow">
+              <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item menuitem grow">
-              <a class="nav-link" href="yoga.html"
-                >Yoga<span class="sr-only">(current)</span></a
-              >
-            </li>
-            
-            <li class="nav-item menuitem">
-              <a class="nav-link active" href="events.html"
-                >Events<span class="sr-only">(current)</span></a
+              <a class="nav-link" href="what-i-do.html"
+                >What I Do<span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item menuitem grow">
               <a class="nav-link" href="gallery.html"
                 >Gallery<span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item menuitem grow">
+              <a class="nav-link" href="events.html"
+                >Events<span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item menuitem grow">
@@ -102,17 +101,16 @@
     <section class="container owner-container">
       <div class="row">
         <div class="col-12">
-          <h3 class="title-text"><i>My Story</i><br /><br /></h3>
+          <h3 class="title-text">My Story<br /><br /></h3>
         </div>
       </div>
       <div class="row">
         <div class="col-12 col-md-5 owner-img">
-          <img class="img-fluid" src="assets/images/ana-bnw.jpg" />
+          <img class="img-fluid" src="assets/images/namaste1.jpg" />
         </div>
 
         <div class="col-12 col-md-7 owner-text">
           <h5>
-            <i>
               Most people know me as Ana but as a Kundalini teacher I am proud
               to carry the name Harpreet Seva Kaur.<br /><br />I began my yoga
               journey 6 yeas ago and have been blessed with many inspiring
@@ -128,8 +126,7 @@
               (Reiki, Shamanic Breathwork and Sound Healing)...<br /><br />
               I look forward to meeting you <br /><br />
               Sat Nam <i class="fas fa-praying-hands"></i>
-            </i>
-          </h5>
+              </h5>
           <br />
         </div>
       </div>
@@ -138,7 +135,7 @@
     <section class="container experience">
       <div class="row">
         <div class="col-12">
-          <h3 class="title-text"><i>My Experience</i></h3>
+          <h3 class="title-text">My Experience</h3>
         </div>
       </div>
 
@@ -209,7 +206,7 @@
     <section class="container">
       <div class="row">
         <div class="col-12 col-md-6 online-session">
-          <h3 class="title-text">Book Online Session</h3>
+          <h3 class="book-session-text">Book Online Session</h3>
           <br />
           <button
             type="submit"
@@ -222,7 +219,7 @@
           <br />
         </div>
         <div class="col-12 col-md-6 online-session">
-          <h3 class="title-text">See Upcoming Retreats</h3>
+          <h3 class="book-session-text">See Upcoming Retreats</h3>
           <br />
           <a href="events.html" />
           <button type="submit" class="btn btn-secondary btn-book">
@@ -268,7 +265,7 @@
           </ul>
         </div>
       </div>
-</footer>
+    </footer>
 
     <!--------Modal--------------------------->
     <!--Code for modal borrowed from Bootstrap and amended to suit the look of the page-->
