Update Gallery wireframe

--- a/events.html
+++ b/events.html
@@ -47,27 +47,27 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarIcon">
           <ul class="navbar-nav ml-auto menucontainer">
-            <li class="nav-item menuitem">
+            <li class="nav-item menuitem grow">
               <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
-            <li class="nav-item menuitem">
-              <a class="nav-link" href="yoga.html"
-                >Yoga<span class="sr-only">(current)</span></a
+            <li class="nav-item menuitem grow">
+              <a class="nav-link" href="what-i-do.html"
+                >What I Do<span class="sr-only">(current)</span></a
               >
             </li>
-             <li class="nav-item menuitem">
-              <a class="nav-link active" href="events.html"
-                >Events<span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item menuitem">
+            <li class="nav-item menuitem grow">
               <a class="nav-link" href="gallery.html"
                 >Gallery<span class="sr-only">(current)</span></a
               >
             </li>
-            <li class="nav-item menuitem">
+            <li class="nav-item menuitem active grow">
+              <a class="nav-link" href="events.html"
+                >Events<span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item menuitem grow">
               <a class="nav-link" href="contact.html"
                 >Contact<span class="sr-only">(current)</span></a
               >
@@ -196,7 +196,7 @@
     </section>
 
     <section class="class-heading">
-      <h3><i>My Classes</i></h3>
+      <h2>Online Classes</h2>
     </section>
 
     <section class="container-fluid class-container">
@@ -239,7 +239,53 @@
         </div>
       </div>
     </section>
-    <footer class="container-fluid">
+
+    <section class="class-heading">
+      <h2>Upcoming Workshops</h2>
+    </section>
+
+    <section class="container-fluid class-container">
+      <div class="row">
+        <div class="col-12 col-md-3 class-times">
+          <h3><a href="yoga.html">Shamanic Breathwork</a></h3>
+          <h4>11.12.-13.12.2020</h4>
+          <h4>Hvar Island, Croatia</h4>
+          <h4>???</h4>
+          <button type="submit" class="btn btn-secondary btn-class" data-toggle="modal" data-target="#bookClassModal">
+            Enquire
+          </button>
+        </div>
+        <div class="col-12 col-md-3 class-times">
+          <h3><a href="#">Kundalini Chakra Journey</a></h3>
+          <h4>10.4.-16.04.2021.</h4>
+          <h4>Rishikesh, India</h4>
+          <h4>???</h4>
+          <button type="submit" class="btn btn-secondary btn-class" data-toggle="modal" data-target="#bookClassModal">
+            Enquire
+          </button>
+        </div>
+        <div class="col-12 col-md-3 class-times">
+          <h3><a href="#">Tantra Yoga</a></h3>
+          <h4>Fri & Sat</h4>
+          <h4>Online</h4>
+          <h4>6.30pm-7.45pm</h4>
+          <button type="submit" class="btn btn-secondary btn-class" data-toggle="modal" data-target="#bookClassModal">
+           Enquire
+          </button>
+        </div>
+        <div class="col-12 col-md-3 class-times">
+          <h3><a href="#">Healing</a></h3>
+          <h4>Sunday</h4>
+          <h4>By appointment only</h4>
+          <h4>10am-6.00pm</h4>
+          <button type="submit" class="btn btn-secondary btn-class" data-toggle="modal" data-target="#bookClassModal">
+            Enquire
+          </button>
+        </div>
+      </div>
+    </section>
+
+<footer class="container-fluid">
       <div class="row">
         <div class="col-12 col-md-6 contact-heading">
           <h4>Contact me:</h4>
